# inspiro-frame

./: .gitignore  Cargo.toml  LICENSE  README.md
espiro-frame/: Cargo.toml  build.rs  sdkconfig.defaults
espiro-frame/.cargo/: config.toml
espiro-frame/src/: main.rs
espyro-frame/: .gitignore  Makefile  app.py  config.py.example  epd_12in48b.py  http_client.py  main.py  mate_client.py  pyrightconfig.json
inspiro-bot/: Cargo.toml  README.md
inspiro-bot/src/: error.rs  lib.rs
inspiro-bot/tests/: api.rs
inspiro-frame/: Cargo.toml
inspiro-frame/src/: api.rs  config.rs  main.rs
inspiro-frame/tests/: api.rs
inspiro-mate/: Dockerfile  README.md  deno.json
inspiro-mate/src/: chrome.ts  chrome_test.ts  inspiro_bot.ts  inspiro_bot_test.ts  server.ts
inspiro-mate/src/screenshot/: chrome.ts  chrome_test.ts  create.ts  create_test.ts  db.ts  db_test.ts  delete.ts  delete_test.ts  get.ts  get_test.ts  image.ts  list.ts  list_test.ts  mod.ts
rgb2bwr/: Cargo.toml  README.md
rgb2bwr/src/: lib.rs
rgb2bwr/tests/: rgb2bwr.rs
waveshare-epd/: Cargo.toml  README.md
waveshare-epd/src/: epd_12in48b.rs  epd_2in7b.rs  error.rs  lib.rs
waveshare-epd/tests/: epd_2in7b.rs
