[package]
name = "espiro-frame"
version = "0.1.0"
authors = ["Maurizio Zucchelli <mauzuc90@yahoo.it>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1.0.79"
embedded-svc = { version = "0.27.0", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
image = { version = "0.24.8", default-features = false, features = ["png"] }
log = { version = "0.4", default-features = false }
toml-cfg = "0.1.3"
waveshare-epd = { version = "0.2.0", features = [
    "epd_12in48b",
], path = "../waveshare-epd" }

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.1.3"
