[package]
name = "inspiro-bot"
version = "0.1.0"
license = "MIT"
authors = ["Maurizio Zucchelli <mauzuc90@yahoo.it>"]
repository = "https://github.com/Denaun/inspiro-frame"
readme = "README.md"
categories = ["api-bindings", "web-programming::http-client"]
edition = "2018"

[dependencies]
image = "0.23.13"
log = "0.4.14"
reqwest = "0.11.0"
thiserror = "1.0.23"

[dev-dependencies]
tokio-test = "*"