[package]
name = "inspiro-frame"
version = "0.1.1"
license = "MIT"
authors = ["Maurizio Zucchelli <mauzuc90@yahoo.it>"]
description = "InspiroBot-based picture frame for RaspberryPI."
repository = "https://github.com/Denaun/inspiro-frame"
readme = "README.md"
edition = "2021"

[dependencies]
rgb2bwr = { version = "0.1.0", path = "../rgb2bwr" }
waveshare-epd = { version = "0.1.0", path = "../waveshare-epd" }

anyhow = "1.0.38"
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.7"
log = "0.4.14"
simplelog = "0.12.1"
ureq = "2.9.1"
