[package]
name = "rgb2bwr"
version = "0.1.1"
license = "MIT"
authors = ["Maurizio Zucchelli <mauzuc90@yahoo.it>"]
categories = ["multimedia::images", "multimedia::encoding"]
repository = "https://github.com/Denaun/inspiro-frame"
readme = "README.md"
edition = "2021"

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
num-traits = "0.2.14"

[dev-dependencies]
float_eq = "1.0.1"