[package]
name = "waveshare-epd"
version = "0.2.0"
license = "MIT"
authors = ["Maurizio Zucchelli <mauzuc90@yahoo.it>"]
description = "Rust port of Waveshare's e-Paper driver."
repository = "https://github.com/Denaun/inspiro-frame"
readme = "README.md"
edition = "2021"
resolver = "2"

[features]
epd_2in7b = ["rpi"]
epd_12in48b = ["esp"]
rpi = ["dep:rppal"]
esp = ["dep:esp-idf-hal"]

[dependencies]
degeneric-macros = "0.5.1"
esp-idf-hal = { version = "0.43", default-features = false, optional = true }
futures = "0.3.30"
image = { version = "0.24.7", default-features = false }
log = { version = "0.4", default-features = false }
rppal = { version = "0.16.1", optional = true }
thiserror = "1.0.23"
